--- a/Views/Properties/Index.cshtml
+++ b/Views/Properties/Index.cshtml
@@ -12,7 +12,7 @@
         <a asp-action="Create">Adicionar Novo Alojamento</a>
     }
 </p>
-<table class="table">
+<table class="table" id="mytable">
     <thead>
         <tr>
             <th>
@@ -34,41 +34,49 @@
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <th>
-                <img class="img-thumbnail" src="data:@item.Images[0].FileType;base64,@Convert.ToBase64String(item.Images[0].Data, 0, item.Images[0].Data.Length)" style="width:250px;height:auto">
-            </th>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <th>
+                    <img class="img-thumbnail" src="data:@item.Images[0].FileType;base64,@Convert.ToBase64String(item.Images[0].Data, 0, item.Images[0].Data.Length)" style="width:250px;height:auto">
+                </th>
 
-            <td>
-                @Html.DisplayFor(modelItem => item.Tittle)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.pricePerNigth)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.City)
-            </td>
-            <td width="11%">
-                @if (User.IsInRole("Owner_Manager"))
-                {
-                    <a asp-action="Edit" asp-route-id="@item.Id"><img src="resources/edit.svg" width="30%" alt="Editar" /></a>
-                }
-                <a asp-action="Details" asp-route-id="@item.Id"><img src="resources/details.svg" width="30%" alt="Detalhes" /></a>
-                @if (User.IsInRole("Owner_Manager"))
-                {
-                    <a asp-action="Delete" asp-route-id="@item.Id"><img src="resources/delete.svg" width="30%" alt="Remover" /></a>
-                }
-                @if (User.IsInRole("Owner_Employeer"))
-                {
-                    <a class="btn btn-primary" asp-controller="Reservations" asp-action="Index" asp-route-id="@item.Id"> Reservas</a>
-      
-                }
+                <td>
+                    @Html.DisplayFor(modelItem => item.Tittle)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Description)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.pricePerNigth)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.City)
+                </td>
+                <td width="11%">
+                    @if (User.IsInRole("Owner_Manager"))
+                    {
+                        <a asp-action="Edit" asp-route-id="@item.Id"><img src="resources/edit.svg" width="30%" alt="Editar" /></a>
+                    }
+                    <a asp-action="Details" asp-route-id="@item.Id"><img src="resources/details.svg" width="30%" alt="Detalhes" /></a>
+                    @if (User.IsInRole("Owner_Manager"))
+                    {
+                        <a asp-action="Delete" asp-route-id="@item.Id"><img src="resources/delete.svg" width="30%" alt="Remover" /></a>
+                    }
+                    @if (User.IsInRole("Owner_Employeer"))
+                    {
+                        <a class="btn btn-primary" asp-controller="Reservations" asp-action="Index" asp-route-id="@item.Id"> Reservas</a>
+
+                    }
                 </td>
             </tr>
-}
+        }
     </tbody>
 </table>
+@section Scripts{
+    <script>
+    $(document).ready(function () {
+        $('#mytable').DataTable();
+    });
+    </script>
+}
