--- a/Views/Roles/Edit.cshtml
+++ b/Views/Roles/Edit.cshtml
@@ -1,4 +1,38 @@
-﻿
+﻿@model Airbnb_PWEB.Models.ApplicationUser
 
 
-<h1>Editar que dados??</h1>
+<h1>Editar dados</h1>
+
+<div class="col-md-4">
+    <form asp-action="Edit">
+        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+        <input type="hidden" asp-for="Id" />
+        <div class="form-group">
+            <label asp-for="FirstName" class="control-label"></label>
+            <input asp-for="FirstName" class="form-control" />
+            <span asp-validation-for="FirstName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="LastName" class="control-label"></label>
+            <input asp-for="LastName" class="form-control" />
+            <span asp-validation-for="LastName" class="text-danger"></span>
+        </div>
+        <div class="form-group">
+            <label asp-for="PhoneNumber" class="control-label"></label>
+            <input asp-for="PhoneNumber" class="form-control" />
+            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
+        </div>
+<div class="form-group">
+    <input type="submit" value="Save" asp-route-id="@Model.Id" class="btn btn-primary" />
+</div>
+    </form>
+</div>
+
+<div>
+    <a class="btn btn-primary" asp-action="Back">Back to List</a>
+</div>
+
+@section Scripts {
+    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
+
