--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -6,12 +6,14 @@
     <title>@ViewData["Title"] - MyAirbnb</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+
+    <link rel="stylesheet" href="https://cdn.datatables.net/1.11.3/css/jquery.dataTables.min.css" />
 </head>
 <body>
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Properties" asp-action="Index"><img src="/resources/logo.png"/></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Properties" asp-action="Index"><img src="/resources/logo.png" /></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -27,31 +29,38 @@
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Categories" asp-action="Index">Categorias</a>
                             </li>
                         }
-                            <li class="nav-item">
-                                <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
-                                    <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
-                                    <input type="submit" value="Search" />
-                                </form>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservas</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Items</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Evaluations" asp-action="Index">Comentários</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Admin Roles</a>
-                            </li>
-                            @if (User.IsInRole("Owner_Manager"))
-                            {
-                                <li class="nav-item">
+                        <li class="nav-item">
+                            <form class="form-inline" asp-controller="Properties" asp-action="Search" method="get">
+                                <input type="text" class="form-control" name="text2search" placeholder="Search a Property..." />
+                                <input type="submit" value="Search" />
+                            </form>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Reservations" asp-action="Index">Reservas</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Items" asp-action="Index">Items</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Evaluations" asp-action="Index">Comentários</a>
+                        </li>
+                        @if(User.IsInRole("Admin")){
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Roles" asp-action="Index">Admin Roles</a>
+                        </li>
+                        }
+                        @if (User.IsInRole("Owner_Manager"))
+                        {
+                            <div class="dropdown">
+                                <button class="dropbtn">Funcionários</button>
+                                <div class="dropdown-content">
                                     <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Novo Funcionário</a>
-                                </li>
-                            }
-                        </ul>
+                                    <a class="nav-link text-dark" asp-controller="Companies" asp-action="Index">Gerir Funcionários</a>
+                                </div>
+                            </div>
+
+                        }
+                    </ul>
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -71,6 +80,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="https://cdn.datatables.net/1.11.3/js/jquery.dataTables.min.js"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
