--- a/Views/Reservations/Details.cshtml
+++ b/Views/Reservations/Details.cshtml
@@ -52,9 +52,18 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.CheckOut)
         </dd>
+         
+         @if(@Model.ApprovalComment != null){
+            <dt class = "col-sm-2">
+                @Html.DisplayNameFor(model => model.ApprovalComment)
+            </dt>
+            <dd class = "col-sm-10">
+                @Html.DisplayFor(model => model.ApprovalComment)
+            </dd>
+            }
     </dl>
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model.ReservationId">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Model.PropertyId">Back to List</a>
 </div>
