--- a/Views/Reservations/Edit.cshtml
+++ b/Views/Reservations/Edit.cshtml
@@ -14,24 +14,9 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="ReservationId" />
             <div class="form-group">
-                <label asp-for="CheckIn" class="control-label"></label>
-                <input asp-for="CheckIn" class="form-control" />
-                <span asp-validation-for="CheckIn" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="CheckOut" class="control-label"></label>
-                <input asp-for="CheckOut" class="form-control" />
-                <span asp-validation-for="CheckOut" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="PropertyId" class="control-label"></label>
-                <input asp-for="PropertyId" class="form-control" />
-                <span asp-validation-for="PropertyId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ApplicationUser.Id" class="control-label"></label>
-                <input asp-for="ApplicationUser.Id" class="form-control" />
-                <span asp-validation-for="ApplicationUser.Id" class="text-danger"></span>
+                <label asp-for="ApprovalComment" class="control-label"></label>
+                <input asp-for="ApprovalComment" class="form-control" />
+                <span asp-validation-for="ApprovalComment" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
@@ -41,7 +26,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index" asp-route-id="@Model.PropertyId">Back to List</a>
 </div>
 
 @section Scripts {
