--- a/Views/Categories/Index.cshtml
+++ b/Views/Categories/Index.cshtml
@@ -26,9 +26,16 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> |
-                    <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> |
+                    @if(User.IsInRole("Admin"))
+                    {
+                    <a asp-action="Edit" asp-route-id="@item.CategoryId">Edit</a> 
+                    <a asp-action="Details" asp-route-id="@item.CategoryId">Details</a> 
                     <a asp-action="Delete" asp-route-id="@item.CategoryId">Delete</a>
+                    }
+                    @if (User.IsInRole("Owner_Manager"))
+                    {
+                    <a class="btn btn-primary" asp-controller="CheckLists" asp-action="Create" asp-route-id=@item.CategoryId>Nova CheckList</a>
+                    }
                 </td>
             </tr>
         }
