Checklist bug fixed and admin manager roles

--- a/Views/CheckItems/Index.cshtml
+++ b/Views/CheckItems/Index.cshtml
@@ -16,7 +16,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsCheck)
+                @*@Html.DisplayNameFor(model => model.IsCheck)*@
             </th>
             <th></th>
         </tr>
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsCheck)
+                @*@Html.DisplayFor(modelItem => item.IsCheck)*@
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.CheckItemId">Edit</a> |
