--- a/Views/CheckItems/Edit.cshtml
+++ b/Views/CheckItems/Edit.cshtml
@@ -21,7 +21,7 @@
                 @Html.DisplayNameFor(model => model.Name)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.IsCheck)
+               @* @Html.DisplayNameFor(model => model.IsCheck)*@
             </th>
             <th></th>
         </tr>
