--- a/Views/Reservations/Index.cshtml
+++ b/Views/Reservations/Index.cshtml
@@ -61,6 +61,10 @@
                     {
                         <span class=" btn btn-danger">Cancelada</span>
                     }
+                    else if (item.Status == StatusReservation.Entregue)
+                    {
+                        <span class=" btn btn-danger">Entregue</span>
+                    }
                     else
                     {
                         <span class=" btn btn-warning">Pendente</span>
