--- a/Views/Results/List.cshtml
+++ b/Views/Results/List.cshtml
@@ -10,10 +10,7 @@
     <thead>
         <tr>
             <th>
-                Name
-            </th>
-            <th>
-                Checked
+                Itens Checked
             </th>
         </tr>
     </thead>
@@ -23,11 +20,10 @@
          <td>
            @Html.DisplayFor(modelItem => item.Name)
          </td>
-         <td>
-           @Html.DisplayFor(modelItem => item.IsCheck)
-         </td>
         </tr>
-
+      
 }       
     </tbody>
 </table>
+
+<a asp-controller="Reservations"asp-action="Index">Back to List</a></a>
