--- a/Views/Roles/Edit.cshtml
+++ b/Views/Roles/Edit.cshtml
@@ -22,6 +22,13 @@
             <input asp-for="PhoneNumber" class="form-control" />
             <span asp-validation-for="PhoneNumber" class="text-danger"></span>
         </div>
+        <div class="form-group">
+        <label asp-for="FunctionRole"></label>
+        <select asp-for="FunctionRole" class="form-control">
+            <option value="Client">Cliente</option>
+            <option value="Owner_Manager">Proprietário Imóvel</option>
+        </select>
+        </div>
 <div class="form-group">
     <input type="submit" value="Save" asp-route-id="@Model.Id" class="btn btn-primary" />
 </div>
